--- a/index.html
+++ b/index.html
@@ -369,8 +369,7 @@
                 box-shadow: 0 2px 4px #434343;
             "
         >
-            <p style="color: #fafafa;">Source Code&nbsp;</p>
-            <span class="material-icons-round">code</span>
+            <p style="color: #fafafa;">Source Code</p>
         </div>
 
         <br />
